Fix li align

--- a/travelgram/styles/nav.css
+++ b/travelgram/styles/nav.css
@@ -2,14 +2,14 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding-block: 20px;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  align-itens: center;
+  align-items: center;
+  padding: 16px;
   gap: 24px;
 
   padding-block: 8px;
